fix api index and routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@0.6.2"
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "api/index.php" }
-  ],
-  "buildCommand": "composer install --no-dev"
+    {
+      "src": "/(.*)",
+      "dest": "api/index.php"
+    }
+  ]
 }
